# olivaxi

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.python  Dockerfile.web  README.md  TEST_ANALISIS.md  astro.config.mjs  docker-compose.yml  olivaxi.db  olivaxi.db-shm  olivaxi.db-wal  olivaξ.avif  package-lock.json  package.json  vite.config.js
.kilo/plans/: 1774549349789-gentle-pixel.md  actualizar-variedades-plagas.md  cleanup-plan.md  connect-index-to-climate.md  hero-moderno-plan.md  plagas-plan.md
api/: Dockerfile  index.ts  olivaxi.db  olivaxi.db-shm  olivaxi.db-wal  package-lock.json  package.json
api/data/: provincias.ts  shared.ts
api/db/: sqlite.ts
api/routes/: alertas.ts  analisis.ts  chat.ts  clima.ts  prediccion.ts
api/services/: analisisAgricola.ts  cronAlertas.ts  llmRotation.ts  riesgos.ts
ml/: label_encoder_nivel.joblib  label_encoder_prov.joblib  predict.py  train.py
oliva-api/: .env.example  olivaxi.db  pyproject.toml
oliva-api/app/: config.py  main.py
oliva-api/app/data/: provincias.py  varieties.py
oliva-api/app/dependencies/: database.py
oliva-api/app/routers/: alertas.py  analisis.py  chat.py  clima.py  prediccion.py
oliva-api/app/services/: llm.py  riesgos.py
src/components/: AlertasClimaticas.astro  AlertasClimaticas.jsx  AlertasPlagas.astro  AlertasPlagas.jsx  AnalisisOlivar.astro  AnalisisOlivar.jsx  ChatConsejero.jsx  ComparadorVariedades.astro  ComparadorVariedades.jsx  DecisionesRapidas.astro  MapaCalor.astro  MapaCalor.jsx  ProvinciaSelect.astro  RankingRiesgo.jsx  (+4 more)
tests/: api.test.ts
(+23 files in other folders)
